fixed button, error, alignment css bugs

--- a/react-login/src/index.css
+++ b/react-login/src/index.css
@@ -12,16 +12,16 @@ output {
   border: none;
   outline: none;
 }
-.app {
+.App {
   height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: aliceblue;
+  background-color: rgb(229, 242, 253);
 }
 
 form {
-  display: block;
+  display: flex;
   position: relative;
 }
 
@@ -36,31 +36,31 @@ form::after {
   z-index: 1;
   background-image: linear-gradient(to bottom right, #f9e491, #f9b591);
 }
-
 form .form-inner {
   position: relative;
   display: block;
-  background-color: #fff;
   padding: 30px;
   z-index: 2;
+  background-color: rgb(255, 253, 249);
 }
-
-form .form-inner h2 {
-  color: #888;
+form .form-inner h2,
+.welcome-text {
+  color: #f9b591;
   font-size: 28px;
-  font-weight: 500;
-  margin-bottom: 30px;
+  font-weight: 800;
+  margin-bottom: 36px;
+  font-size: 32px;
 }
 
 form .form-inner .form-group {
   display: block;
-  width: 300px;
+  width: 350px;
   margin-bottom: 15px;
 }
 .form-inner .form-group label {
   display: block;
   color: #666;
-  font-size: 12px;
+  font-size: 24px;
   margin-bottom: 5px;
   transition: 0.4s;
 }
@@ -72,7 +72,7 @@ form .form-inner .form-group input {
   display: block;
   width: 100%;
   padding: 10px 15px;
-  background-color: #f8f8f8;
+  background-color: #f3f0f0;
   border-radius: 8px;
   transition: 0.4s;
 }
@@ -80,7 +80,8 @@ form .form-inner .form-group input:focus {
   box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
 }
 
-form .form-inner input[type="submit"] {
+form .form-inner input[type="submit"],
+.logcut {
   display: inline-block;
   padding: 10px 15px;
   border-radius: 8px;
@@ -90,13 +91,24 @@ form .form-inner input[type="submit"] {
     #f9b591c0 50%,
     #fe487fc2
   );
-  background-size: 200%;
+  width: 50%;
+  background-size: 100%;
   background-position: 0%;
   transition: 0.4s;
-  color: #fff;
-  font-weight: 700;
+  color: rgb(82, 82, 82);
+  font-weight: 900;
   cursor: pointer;
+  margin-top: 12px;
 }
 form .form-inner input[type="submit"]:hover {
   background-position: 100% 0%;
+}
+.error {
+  margin-bottom: 36px;
+  color: #fefefe;
+  font-size: 22px;
+  font-weight: 700;
+  background-color: #fa9b9b;
+  border-radius: 4px;
+  padding: 5px;
 }
